# cnn_picture_gazebo

./: readme
ros_kinect_gazebo/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_kinect_gazebo/devel/share/TurtleMove/cmake/: TurtleMoveConfig.cmake
ros_kinect_gazebo/devel/share/capture/cmake/: captureConfig.cmake
ros_kinect_gazebo/devel/share/turtlemove/cmake/: turtlemoveConfig.cmake
ros_kinect_gazebo/src/capture/: CMakeLists.txt  package.xml
ros_kinect_gazebo/src/capture/src/: capicture (原始未修改).cpp  capicture.cpp  open_rec_contours.cpp
ros_kinect_gazebo/src/launch/: my_turtlebot.launch
ros_kinect_gazebo/src/turtlemove/: CMakeLists.txt  package.xml
ros_kinect_gazebo/src/turtlemove/scripts/: cnn_main.py  contr_turtle (copy).py  contr_turtle.py  data_input.py  model.py
ros_kinect_gazebo/src/turtlemove/scripts/log_good/: checkpoint  events.out.tfevents.1489549771.server  model.ckpt-5000.index
ros_kinect_gazebo/src/turtlemove/scripts/one_pictest/: test.tfrecords  test.txt
ros_kinect_gazebo/src/turtlemove/scripts/recycle/: cnn_main1.py  talker.py  tryit.py
ros_kinect_gazebo/src/turtlemove/src/: forwardmove.cpp
